added pom.xml application porpreies; some fixes; added first tests